--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,6 +211,14 @@ main {
     color: #3a3a3a;
 }
 
+/* Media query: large or landscape phones (576px and up) */
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
+}
+
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
     /* Header */
@@ -268,6 +276,11 @@ main {
         align-self: flex-end;
     }
 
+    /* Gallery */
+    #photos {
+        column-count: 3;
+    }
+
 }
 
 /* Large devices (laptops and desktops, 992px and up) */
@@ -275,6 +288,11 @@ main {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
     }
+
+        /* Gallery */
+        #photos {
+            column-count: 4;
+        }
 }
 
 /* Extra large devices (1200px and up) */
